--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -41,26 +41,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Button"
+        android:text="webview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_jetpack"
         tools:layout_editor_absoluteX="15dp"
         tools:layout_editor_absoluteY="206dp" />
 
-    <com.wsf.customview.KotlinEdit
-        android:layout_marginLeft="16dp"
-        android:id="@+id/my_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="自定义TextvView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/testView" />
+    <!--    <com.wsf.customview.KotlinEdit-->
+    <!--        android:id="@+id/my_edit"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginLeft="16dp"-->
+    <!--        android:hint="自定义TextvView"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/testView" />-->
 
-    <EditText
-        android:layout_marginLeft="16dp"
-        android:hint="系统text"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/my_edit" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
