--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--     不断扩散的波纹-->
     <declare-styleable name="SpreadView">
         <!--中心圆颜色-->
         <attr name="spread_center_color" format="color" />
@@ -14,5 +15,13 @@
         <attr name="spread_max_radius" format="integer" />
         <!--扩散延迟间隔-->
         <attr name="spread_delay_milliseconds" format="integer" />
+    </declare-styleable>
+
+    <!--    带锯齿边的优惠券-->
+    <declare-styleable name="DiscountView">
+        <!--线条颜色-->
+        <attr name="line_color" format="color" />
+        <!--底部打勾角标颜色-->
+        <attr name="tag_color" format="color" />
     </declare-styleable>
 </resources>
